Add Lambda Edge support